# LiDAR_IMU_Init

./: .gitignore  CMakeLists.txt  package.xml
config/: robosense.yaml  velodyne.yaml
include/: common_lib.h  matplotlibcpp.h
include/LI_init/: LI_init.cpp  LI_init.h
src/: IMU_Processing.hpp  caliber.cpp  caliber_main.cpp  laserMapping-new.cpp  laserMapping.cpp  preprocess.cpp  preprocess.h
